--- a/src/webapp/Page/Login/style.scss
+++ b/src/webapp/Page/Login/style.scss
@@ -5,6 +5,7 @@ body {
     position: relative;
     margin: 150px auto;
     width: 400px;
+    background: #f9fafb;
     .login-logo {
       img {
         margin: auto;
