--- a/src/webapp/Page/Registration/style.scss
+++ b/src/webapp/Page/Registration/style.scss
@@ -40,6 +40,7 @@
   width: calc(100% - 50%);
   margin: auto;
   z-index: 10;
+  height: 90%;
   -webkit-box-shadow: 0px 0px 27px 1px rgba(209, 209, 209, 1);
   -moz-box-shadow: 0px 0px 27px 1px rgba(209, 209, 209, 1);
   box-shadow: 0px 0px 27px 1px rgba(209, 209, 209, 1);
